4.0.1
- Added a log model to use for a logger implementation.
- Added .min. support for css files.
- Added apostrophes around string array keys to the SmokyGrey
  skin for better readability.
- Added support for a JSON configuration file.
- Added PHP 8.0 support.
- Bugfix: Endless scrolling when clicking too fast through
  the search.
- Bugfix: Exception when using one php statement and a krexx
  call in the same line.

4.0.0
- Added process resource analysis.
- Added better callback analysis.
- Added better string analysis (json, file path, callback, xml)
- Added timestamp analysis for large integers.
- Added throw away messages.
- Added return type to the method and function analysis.
- Added additional data to the constants analysis for PHP 7.1
  and higher. The scope analysis now respects their visibility.
- Added logging shorthand "krexxlog();".
- Change: Removed all deprecations.
- Change: Removed the PHP 5.x fatal error handler.
- Change: Dropped PHP 5.x support.
- Change: Remove all double Exception / Throwable catching
- Change: Introduced PSR-12 coding style
- Change: Simplified the skin rendering.
- Change: Deprecations for the fallback settings class.
- Change: Introduced strict mode.
- Change: Introduced scalar type hints.
- Change: Introduced method return types.
- Change: Simplified the Model.
- Change: Do not display the encoding info, if we have a buffer
  info available.
- Change: Different analysis order, when coming from the $this
  scope, for better source generation.
- Change: Different order in the backtrace analysis, for better
  readability.
- Change: Use compressed css for the SmokyGrey skin.
- Change: Refactored the code generation.
- Change: Refactored the routing.
- Change: "Called from" is always expanded in the smokygrey skin.
- Change: The connector constants are now strings.
- Change: Removed the "local opening function" aka. devHandle.
- Bugfix: The search does now respects the selected tab.