@@ -196,6 +196,7 @@ call_user_func(function () {
         include_once KREXX_DIR . 'src/Service/Plugin/PluginConfigInterface.php';
         include_once KREXX_DIR . 'src/Service/Plugin/Registration.php';
         include_once KREXX_DIR . 'src/Service/Plugin/SettingsGetter.php';
+        include_once KREXX_DIR . 'src/Service/Plugin/NewSetting.php';
 
         include_once KREXX_DIR . 'src/View/Output/AbstractOutput.php';
         include_once KREXX_DIR . 'src/View/Output/Chunks.php';
