@@ -153,8 +153,21 @@ class Validation extends Fallback
             SettingsGetter::getBlacklistDebugClass()
         );
 
-        // "Load" the settings for the do-not-edit config.
+        // Load the settings for the do-not-edit config.
         $this->feDoNotEdit = static::FE_DO_NOT_EDIT;
+
+        // Adding the new configuration options from the plugins.
+        $pluginConfig = SettingsGetter::getNewSettings();
+        if (empty($pluginConfig) === true) {
+            return;
+        }
+
+        /** @var \Brainworxx\Krexx\Service\Plugin\NewSetting $newSetting */
+        foreach ($pluginConfig as $newSetting) {
+            if ($newSetting->isFeProtected() === true) {
+                $this->feDoNotEdit[] = $newSetting->getName();
+            }
+        }
     }
 
     /**
